# diplomado

./: Readme.MD  pyproject.toml
Codigo/: Primer_Cuaderno.ipynb
Cuadernos/: Modelos_Dimensionales_clase26 - Python (3).ipynb  SECOP.ipynb  SQL_Class.ipynb  Taller_1.ipynb  Taller_Modelos_Dimensionales.ipynb  Trabajo_final_modelo_dimensional.ipynb
Datos/: DIVIPOLA-_C_digos_municipios_20250723.csv  Goleadas_Copa_America.xlsx  Info_2005_2019.xlsx  Info_2020_2035.xlsx  MEN_ESTADISTICAS_EN_EDUCACION_EN_PREESCOLAR__B_SICA_Y_MEDIA_POR_MUNICIPIO_20250722.csv  Readme.MD  Secuestros.db  app.py  cargar_datos.py  comparativo.py  cumplimiento_educativo.py  empresa.db  evolucion.py  mapa.py  modelo_educativo.db  transformacion.py  visualizaciones.py
